now with: austalium support! (i think?) email support! (sends notifications) other things that I optimized

--- a/HtmlAgilityPack/HtmlAgilityPack.csproj
+++ b/HtmlAgilityPack/HtmlAgilityPack.csproj
@@ -75,6 +75,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Notifications.cs" />
     <Compile Include="StringParsing.cs" />
     <Compile Include="WebPost.cs" />
     <Compile Include="WebRetrieve.cs" />
