--- a/HtmlAgilityPack/packages.config
+++ b/HtmlAgilityPack/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="HtmlAgilityPack" version="1.4.9" targetFramework="net40" />
   <package id="log4net" version="2.0.3" targetFramework="net40" />
+  <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net40" />
   <package id="PhantomJS" version="2.0.0" targetFramework="net40" />
   <package id="RegexBuilder" version="1.0.0" targetFramework="net40-Client" />
   <package id="RegexProvider" version="0.0.4" targetFramework="net40-Client" />
